<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.inclass03.EditActivity" >

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/name_hint" />

    <EditText
        android:id="@+id/emailText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailText"
        android:layout_marginTop="18dp"
        android:text="@string/lang_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/language"
        android:layout_marginTop="14dp" >

        <RadioButton
            android:id="@+id/radio_java"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_java" />

        <RadioButton
            android:id="@+id/radio_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_c" />

        <RadioButton
            android:id="@+id/radio_c1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_c1" />
    </RadioGroup>

    <Button
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/save_button" />

    <SeekBar
        android:id="@+id/mood"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/save"
        android:layout_alignLeft="@+id/save"
        android:layout_alignStart="@+id/save"
        android:layout_marginBottom="33dp"
        android:layout_marginLeft="7dp"
        android:layout_marginStart="7dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/mood"
        android:layout_alignLeft="@+id/mood"
        android:layout_alignStart="@+id/mood"
        android:layout_marginBottom="25dp"
        android:text="@string/mood_txt"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/radioGroup1"
        android:text="@string/acct_text" />

</RelativeLayout>
