<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.inclass03.DisplayActivity" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="82dp"
        android:layout_marginStart="82dp"
        android:text="@string/title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginTop="23dp"
        android:text="@string/name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_marginTop="23dp"
        android:text="@string/email"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/lang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_marginTop="23dp"
        android:text="@string/lang"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lang"
        android:layout_marginTop="23dp"
        android:text="@string/account"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/moodValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/account"
        android:layout_marginTop="23dp"
        android:text="@string/mood"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageView
        android:id="@+id/ImageView05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/moodValue"
        android:layout_alignLeft="@+id/ImageView02"
        android:layout_alignStart="@+id/ImageView02"
        android:contentDescription="@string/nothing"
        android:src="@drawable/ic_action_edit" />

    <ImageView
        android:id="@+id/ImageView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/email"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@+id/name"
        android:layout_toRightOf="@+id/title"
        android:contentDescription="@string/nothing"
        android:src="@drawable/ic_action_edit" />

    <ImageView
        android:id="@+id/ImageView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lang"
        android:layout_alignLeft="@+id/ImageView01"
        android:layout_alignStart="@+id/ImageView01"
        android:contentDescription="@string/nothing"
        android:src="@drawable/ic_action_edit" />

    <ImageView
        android:id="@+id/ImageView03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/account"
        android:layout_alignLeft="@+id/ImageView02"
        android:layout_alignStart="@+id/ImageView02"
        android:contentDescription="@string/nothing"
        android:src="@drawable/ic_action_edit" />

    <ImageView
        android:id="@+id/ImageView04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/moodValue"
        android:layout_alignLeft="@+id/ImageView05"
        android:layout_alignStart="@+id/ImageView05"
        android:contentDescription="@string/nothing"
        android:src="@drawable/ic_action_edit" />

</RelativeLayout>